<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2A2A"
    tools:context=".principal">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="214dp"
        android:layout_height="112dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngegg__4_" />

    <Button
        android:id="@+id/button8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:onClick="eliminar"
        android:text="@string/BotonEliminar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:onClick="editar"
        android:text="@string/BotonModificar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:onClick="buscar"
        android:text="@string/BotonBuscar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:onClick="insertar"
        android:text="@string/BotonRegistrar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_placa" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:onClick="insertar"
        android:text="@string/BotonRegistrar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_placa" />

    <EditText
        android:id="@+id/txt_placa"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:backgroundTint="#F6F1F1"
        android:ems="10"
        android:hint="Placa"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#F6F1F1"
        android:textColorHighlight="#F6F1F1"
        android:textColorHint="#F6F1F1"
        android:textColorLink="#F6F1F1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nomape"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txt_nomape"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:backgroundTint="#F6F1F1"
        android:ems="10"
        android:hint="Nombres y apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#F6F1F1"
        android:textColorHighlight="#F6F1F1"
        android:textColorHint="#F6F1F1"
        android:textColorLink="#F6F1F1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cedula"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txt_cedula"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:backgroundTint="#F6F1F1"
        android:ems="10"
        android:hint="Cedula del conductor"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#F6F1F1"
        android:textColorHighlight="#F6F1F1"
        android:textColorHint="#F6F1F1"
        android:textColorLink="#F6F1F1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />
</android.support.constraint.ConstraintLayout>